--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -27,6 +27,9 @@ p {
   display: flex;
   margin-bottom: var(--gutter);
 }
+nav {
+  justify-content: space-between;
+}
 
 .desktop {
   margin: 0;
@@ -67,7 +70,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
@@ -107,4 +110,9 @@ p {
 
 .purple-text {
   color: var(--purple);
+}
+@media screen and (max-width: 700px) {
+  nav {
+    justify-content: flex-start; /* Aligner les éléments à gauche pour les écrans inférieurs à 700px */
+  }
 }
