--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -25,7 +25,8 @@ p {
 
 .menu {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  width: 100%;
   margin-bottom: var(--gutter);
 }
 
