--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -115,6 +115,11 @@ main {
 }
 @media screen and (max-width: 700px) {
   nav {
-    justify-content: flex-start; /* Aligner les éléments à gauche pour les écrans inférieurs à 700px */
+    justify-content: flex-start;
+  }
+}
+@media screen and (max-width: 700px) {
+  .desktop {
+    display: none;
   }
 }
