--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -115,11 +115,16 @@ main {
 }
 @media screen and (max-width: 700px) {
   nav {
-    justify-content: flex-start;
+    justify-content: flex-start; /* Aligner les éléments à gauche pour les écrans inférieurs à 700px */
   }
 }
 @media screen and (max-width: 700px) {
   .desktop {
-    display: none;
+    display: none; /* cache l'image */
+  }
+}
+@media screen and (min-width: 700px) {
+  .skills {
+    display: flex;
   }
 }
