Etape 4 CSS partie 2

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -126,5 +126,11 @@ main {
 @media screen and (min-width: 700px) {
   .skills {
     display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .skills .column {
+    width: 1000rem;
+    border-radius: 20px;
   }
 }
