--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -134,3 +134,11 @@ main {
     border-radius: 20px;
   }
 }
+@media screen and (max-width: 700px) {
+  .skills {
+    flex-direction: column-reverse;
+    display: flex;
+    border-radius: 12px;
+    padding: 0px 10%;
+  }
+}
