css step 7 (step 6 déjà faite dans step 4)

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -125,6 +125,10 @@ p {
   color: var(--purple);
 }
 
+.disabled {
+  opacity: 0.5;
+}
+
 @media screen and (max-width: 700px) {
   .desktop {
     display: none;
