Forgot to push the change... Here all the CSS & JS...Sorry !

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -108,3 +108,59 @@ p {
 .purple-text {
   color: var(--purple);
 }
+.firstBanner{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.disabled{
+  opacity: 50%;
+}
+
+.projects{
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 700px){
+  header nav{
+    display: flex;
+    justify-content: space-between;
+  }
+  .firstBanner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .skills{
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
+
+
+
+}
+@media screen and (max-width: 700px){
+  .desktop{
+    display: none;
+  }
+  .skills{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
