--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -23,9 +23,21 @@ p {
   padding: 0 var(--gutter);
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
 .menu {
   display: flex;
   margin-bottom: var(--gutter);
+}
+
+.first-banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .desktop {
@@ -52,6 +64,8 @@ p {
 }
 
 .skills {
+  display: flex;
+  justify-content: center;
   margin-top: calc(var(--gutter) * -2);
   border-radius: var(--radius);
   padding: 0 10%;
@@ -67,7 +81,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
@@ -76,6 +90,7 @@ p {
 .column:first-of-type {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
+  order: 1;
 }
 
 .column:last-child {
@@ -92,8 +107,20 @@ p {
   color: var(--lightWildColor);
 }
 
+.recent-work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .projects a {
   color: var(--purple);
+}
+
+.boxes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .box {
@@ -107,4 +134,32 @@ p {
 
 .purple-text {
   color: var(--purple);
+}
+
+.disabled {
+  opacity: 0.6;
+}
+
+@media screen and (max-width: 700px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .skills {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10%;
+  }
+
+  .boxes {
+    display: flex;
+    flex-direction: column;
+  }
 }
