--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -11,6 +11,16 @@
   --textAlign: center;
 }
 
+nav{
+  display: flex;
+  justify-content: space-between;
+}
+.banner{
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
 img {
   max-width: 100%;
 }
@@ -34,6 +44,12 @@ p {
   margin-bottom: calc(var(--gutter) * -0.3125);
 }
 
+@media (max-width: 700px)  {
+  .desktop{
+    display: none;
+  }
+}
+
 .description {
   color: var(--light);
   display: flex;
@@ -55,11 +71,21 @@ p {
   margin-top: calc(var(--gutter) * -2);
   border-radius: var(--radius);
   padding: 0 10%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
+}
+
+@media (max-width:700px) {
+  .skills{
+    flex-direction: column-reverse;
+  }
 }
 
 .skills--title {
   margin: calc(var(--gutter) * -2) 0;
   text-align: var(--textAlign);
+  
 }
 
 .column {
