--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -67,7 +67,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
@@ -84,7 +84,9 @@ p {
 }
 
 .column ul {
+  display: block;
   list-style: none;
+  flex-direction: column;
   padding: 0;
 }
 
