--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -108,3 +108,122 @@ p {
 .purple-text {
   color: var(--purple);
 }
+@media screen and (min-width: 700px) {
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #logo {
+    order: -1; 
+  }
+  .menu {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .menu li {
+    margin-left: 20px; 
+  }
+}
+.banner {
+  text-align: center; 
+  padding: 50px 0; }
+
+.banner h1 {
+  font-size: 36px; 
+}
+
+.banner p {
+  font-size: 18px; 
+  margin-bottom: 20px; 
+}
+
+.avatar {
+  width: 150px; 
+  border-radius: 50%; 
+  margin-bottom: 20px; 
+}
+
+.desktop {
+  width: 100%; 
+}
+
+
+@media screen and (min-width: 700px) {
+  .banner {
+    max-width: 800px; 
+    margin: 0 auto; 
+  }
+}
+.avatar {
+  width: 150px; 
+  border-radius: 50%; 
+  margin-bottom: 20px; 
+}
+
+.desktop {
+  width: 100%; 
+}
+
+
+@media screen and (min-width: 700px) {
+  .banner {
+    max-width: 800px; 
+    margin: 0 auto; }
+}
+@media screen and (max-width: 700px) {
+  .desktop {
+    display: none;}
+  }
+  @media screen and (min-width: 700px) {
+    .skills {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start; 
+    }
+  
+    .column {
+      width: 48%; 
+    }
+  }
+  @media screen and (min-width: 700px) {
+    .skills {
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .columns-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between; 
+      max-width: 800px; 
+      margin: 0 auto; 
+    }
+  
+    .column {
+      width: calc(50% - 20px); 
+      margin-bottom: 20px; }
+    }
+    @media screen and (max-width: 700px) {
+      .skills--title {
+        display: block; }
+      }
+      @media screen and (min-width: 701px) {
+        .skills--title {
+          display: none; 
+        }
+      }
+      @media screen and (min-width: 701px) {
+        .projects {
+          display: flex;
+          flex-wrap: wrap; 
+          justify-content: space-between; 
+        }
+      
+        .box {
+          width: calc(25% - 20px); 
+          margin-bottom: 20px; 
+        }
+      }
+      
