--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -10,7 +10,9 @@
 
   --textAlign: center;
 }
-
+header > nav{
+  justify-content: space-between;
+}
 img {
   max-width: 100%;
 }
@@ -26,6 +28,7 @@ p {
 .menu {
   display: flex;
   margin-bottom: var(--gutter);
+  
 }
 
 .desktop {
