--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -9,31 +9,42 @@
   --styledShadow: 0 5px 5px 0 var(var(--shadowColor));
 
   --textAlign: center;
-}
 
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
 img {
   max-width: 100%;
 }
-
-h1 {
-  font-size: calc(var(--gutter) * 1.5);
+.head {
+  font-size: calc(var(--gutter) * 1);
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  align-items: center;
 }
-
 p {
   padding: 0 var(--gutter);
 }
 
-.menu {
-  display: flex;
+.menu{
+  list-style: none;
   margin-bottom: var(--gutter);
+  
+}
+.menu li{
+  margin-left: 10px;
 }
 
 .desktop {
   margin: 0;
   margin-top: calc(var(--gutter) * 5);
   margin-bottom: calc(var(--gutter) * -0.3125);
-}
 
+}
 .description {
   color: var(--light);
   display: flex;
@@ -60,6 +71,27 @@ p {
 .skills--title {
   margin: calc(var(--gutter) * -2) 0;
   text-align: var(--textAlign);
+}
+@media screen and (min-width: 700px) {
+  .menu {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .desktop {
+    display: none;
+  }
+  .skills--title{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-wrap: wrap-reverse;
+  }
+  .projects{
+    display: flex;
+    justify-content:space-between;
+    justify-items:center;
+    flex-wrap: wrap;
+  }
 }
 
 .column {
@@ -94,6 +126,7 @@ p {
 
 .projects a {
   color: var(--purple);
+  opacity: 0.5;
 }
 
 .box {
