--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -70,6 +70,16 @@ p {
 }
 
 .skills {
+  display: flex;
+
+}
+
+.column {
+  width: 400px;
+  border-radius: 0px 12px;
+}
+
+.skills {
   margin-top: calc(var(--gutter) * -2);
   border-radius: var(--radius);
   padding: 0 10%;
@@ -129,8 +139,21 @@ p {
 
 
 
-@ media (min-width:700px) {
+@media (min-width:700px) {
   header nav {
-    dispalay: block;
+    display: block;
+  }
+
+
+
+}
+
+@media(max-width:700px) {
+  .desktop img {
+    display: none;
+  }
+
+  .skills {
+    flex-direction: column;
   }
 }
