--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -165,6 +165,7 @@ p {
 .projects div {
     display: flex;
     flex-flow: column nowrap;
+    align-items: center;
 }
 
 @media screen and (min-width: 700px) {
