--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -11,16 +11,29 @@
   --textAlign: center;
 
 }
-.header{
+@media screen and (max-width: 700px){
+
+  .desktop {
+    display: none;
+  }
+  .skills{
+    display: inline;
+
+  }
+  .projects{
+    display: flex;
+    justify-content:center;
+  }
+}
+header nav{
   display: flex;
   justify-content: space-between;
-  justify-items: center;
 }
 img {
   max-width: 100%;
 }
 .head {
-  font-size: calc(var(--gutter) * 1);
+  font-size: calc(var(--gutter) * 0.7);
   display: flex;
   justify-content:center;
   flex-direction: column;
@@ -43,6 +56,8 @@ p {
   margin: 0;
   margin-top: calc(var(--gutter) * 5);
   margin-bottom: calc(var(--gutter) * -0.3125);
+  display: flex;
+  justify-content: center;
 
 }
 .description {
@@ -71,27 +86,6 @@ p {
 .skills--title {
   margin: calc(var(--gutter) * -2) 0;
   text-align: var(--textAlign);
-}
-@media screen and (min-width: 700px) {
-  .menu {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .desktop {
-    display: none;
-  }
-  .skills--title{
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    flex-wrap: wrap-reverse;
-  }
-  .projects{
-    display: flex;
-    justify-content:space-between;
-    justify-items:center;
-    flex-wrap: wrap;
-  }
 }
 
 .column {
