Finish CSS step 4 part 2

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -122,4 +122,9 @@ main > section:first-child {
   .desktop {
     display: block;
   }
+
+  .skills {
+    display: flex;
+    justify-content: center;
+  }
 }
