--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -56,6 +56,8 @@ p {
   margin-top: calc(var(--gutter) * -2);
   border-radius: var(--radius);
   padding: 0 10%;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .skills--title {
@@ -124,7 +126,7 @@ main > section:first-child {
   }
 
   .skills {
-    display: flex;
     justify-content: center;
+    flex-direction: row-reverse;
   }
 }
