etape 7 et 8 css

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -10,7 +10,7 @@
   --radius: 5px;
   --borderTemplate: 1px solid;
 
-  --darkColor : #000000;
+  --darkColor: #000000;
   --textColor: #39424e;
   --wildColor: #f76c6c;
   --lightWildColor: #ffc0cb;
@@ -54,8 +54,9 @@ button:focus {
 
 .purple {
   color: var(--purple);
+  opacity: var(--purple);
 }
 
 #firstname {
   color: red;
-}  
+}
